# lidar-comp-vision-indoor-autonomous-navigation

./: CMakeCache.txt  LICENSE  README.md  autocore.launch  init.sh  object_classify.launch  object_classify_display.launch  ros_control.sh  steering_classify.launch  vision_autocore.launch
src/autobot/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/autobot/cfg/: autobot.cfg
src/autobot/launch/: autobot_vision_detect.launch  autobot_vision_detect_3.launch  autobot_zed_obj_detect.launch  autobot_zed_obj_detect_debug.launch  obj_classify.launch  obj_classify_test.launch  obj_classify_test_display.launch  obj_detect.launch  obj_detect_display.launch  obj_detect_test.launch  vision_obj_classify.launch  vision_obj_classify_3.launch  zed.launch  zed_camera.launch  zed_camera_autobot.launch
src/autobot/msg/: bounding_box.msg  compound_img.msg  detected_img.msg  detected_object.msg  pathFinderState.msg  wall_dist.msg
src/autobot/src/: Makefile  cameraControl.cpp  capture_image.py  keySteer.py  motorControl.py  navigator.py  navigator_input_test.py  navigator_test.py  obj_classifier.cpp  obj_detector.cpp  obstruction.py  obstruction_test.py  pathFinder.py  pidControl.py  stopsign.py  udpRemote.py  udpRemote_test.py  vision_classify.cpp  vision_detect.cpp  zed_wrapper_node.cpp  zed_wrapper_nodelet.cpp
src/autobot/src/model/: bvlc_alexnet.prototxt  deploy.prototxt  labels.txt
src/autobot/src/model/Angle_Classification_old_new/: deploy.prototxt  info.json  labels.txt  mean.binaryproto  original.prototxt  solver.prototxt  train_val.prototxt
src/autobot/srv/: AdjustWallDist.srv  TogglePathFinder.srv
src/image_common/image_transport/: CMakeLists.txt
src/vision_opencv/cv_bridge/: CMakeLists.txt
sysconfig/: 70-persistent-net.rules  README.md  interfaces
teensy_drive/: README.md  teensy_drive.ino
